--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.en.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.en.yml
@@ -3,7 +3,7 @@ download_pictures: Download pictures onto your server
 carrot: Enable share to Carrot
 diaspora_url: diaspora* URL, if the service is enabled
 export_epub: Enable ePub export
-export_mobi: Enable .mobi export
+export_mobi: Enable .mobi export (deprecated, will be removed in 2.6.0)
 export_pdf: Enable PDF export
 export_csv: Enable CSV export
 export_json: Enable JSON export
