Mass action toggle button added

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -240,6 +240,7 @@ entry:
         export_title: Export
         show_same_domain: Show articles with the same domain
         assign_search_tag: Assign this search as a tag to each result
+        toggle_mass_action: Toggle mass action
     filters:
         title: Filters
         status_label: Status
