Mass action tag layout updated

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -241,6 +241,7 @@ entry:
         show_same_domain: Show articles with the same domain
         assign_search_tag: Assign this search as a tag to each result
         toggle_mass_action: Toggle mass action
+        mass_action_tags_input_placeholder: tag1, tag2, tag3
     filters:
         title: Filters
         status_label: Status
